tests/baselines/reference/publicMemberImplementedAsPrivateInDerivedClass.errors.txt
tests/cases/compiler/publicMemberImplementedAsPrivateInDerivedClass.ts(4,7): error TS2420: Class 'Foo' incorrectly implements interface 'Qux'.
  Property 'Bar' is private in type 'Foo' but not in type 'Qux'.


==== tests/cases/compiler/publicMemberImplementedAsPrivateInDerivedClass.ts (1 errors) ====
    interface Qux {
     Bar: number;
    }
    class Foo implements Qux {
          ~~~
!!! error TS2420: Class '{|Foo|0|}' incorrectly implements interface '{|Qux|1|}'.
!!! error TS2420:   Property 'Bar' is private in type 'Foo' but not in type 'Qux'.
!!! annotated symbol 0 tests/cases/compiler/publicMemberImplementedAsPrivateInDerivedClass.ts:4:7
!!! annotated symbol 1 tests/cases/compiler/publicMemberImplementedAsPrivateInDerivedClass.ts:1:11
     private Bar: number;
    }
    